--- a/_posts/2018-01-04-Chaitanya-BTP2016-17.md
+++ b/_posts/2018-01-04-Chaitanya-BTP2016-17.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "BTP: Design of an aerostat for agricultural purposes (Fall/Spring 201x)"
+title: "BTP: Design of an aerostat for agricultural purposes"
 author: Chaitanya
 description: "Project Review: BTP"
 modified: 2018-01-04
