--- a/_posts/2018-01-04-Asim-Ukaye-BTP2016-17.md
+++ b/_posts/2018-01-04-Asim-Ukaye-BTP2016-17.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "BTP: Study of Control in Wind Turbine (Fall/Spring 201x)"
+title: "BTP: Study of Control in Wind Turbine"
 author: Asim Ukaye
 description: "Project Review: BTP"
 modified: 2018-01-04
