--- a/_posts/course_reviews/department_electives/2022-12-20-AE-6102.md
+++ b/_posts/course_reviews/department_electives/2022-12-20-AE-6102.md
@@ -39,7 +39,7 @@ tags: assignments theory python project
 
 ---
 
-**Information about Projects/Assignments**:
+**Course Evaluation Structure**:
 - Assignments - 65%
 - Group project - 25%
 - Quiz -  10%
