--- a/_posts/course_reviews/department_electives/2022-12-22-ME-415.md
+++ b/_posts/course_reviews/department_electives/2022-12-22-ME-415.md
@@ -26,7 +26,7 @@ For people intrested in Computational fluids research , a basic CFD course is a 
 
 ---
 
-**Information about Projects/Assignments**:
+**Course Evaluation Structure**:
 - Assignments x4 = 45%
 - one quiz - 5%
 - Midsem and endsem rest.
