--- a/_posts/course_reviews/department_electives/2022-12-23-AE-678.md
+++ b/_posts/course_reviews/department_electives/2022-12-23-AE-678.md
@@ -25,7 +25,7 @@ Please refer to asc for this
 
 ---
 
-**Information about Projects/Assignments**:
+**Course Evaluation Structure**:
 2 Assignments, first one is easy, second one is more of a project and needs lot of effort and quite difficult but what you learn from it is proper application of static aeroelasticity to a real aircraft wing.
 
 **Quizzes/Midsem/Endsem papers Difficulty**: 5/5
