--- a/_posts/course_reviews/department_electives/2022-12-24-ME-472.md
+++ b/_posts/course_reviews/department_electives/2022-12-24-ME-472.md
@@ -27,7 +27,7 @@ tags: project assignments
 
 ---
 
-**Information about Projects/Assignments**:
+**Course Evaluation Structure**:
 - HW 1,2,3 : 7%, 7%, 6% 
 - Mid Sem: 25%
 - End Sem: 40% 
