--- a/_posts/course_reviews/department_electives/2020-12-27-AE-667.md
+++ b/_posts/course_reviews/department_electives/2020-12-27-AE-667.md
@@ -31,7 +31,8 @@ tags: aerodynamics theory assignments
 
 ---
 
-**Information about Projects/Assignments**: Best thing about the course - NO EXAMS/QUIZZES, only assignments. 5 assignments - each for 17%, that is 85% and 15% for seminar, which was srcapped due to pandemic and 3 best assignments out of 5 were considered. They were really interesting and learning based.
+**Course Evaluation Structure**: 
+Best thing about the course - NO EXAMS/QUIZZES, only assignments. 5 assignments - each for 17%, that is 85% and 15% for seminar, which was srcapped due to pandemic and 3 best assignments out of 5 were considered. They were really interesting and learning based.
 
 **Quizzes/Midsem/Endsem papers Difficulty**: 4/5
 
