--- a/_posts/course_reviews/department_electives/2020-12-28-AE-706.md
+++ b/_posts/course_reviews/department_electives/2020-12-28-AE-706.md
@@ -30,7 +30,7 @@ tags: assignments theory
 
 ---
 
-**Information about Projects/Assignments**:
+**Course Evaluation Structure**:
 
 Assignments: 30%
 Midsem: 30%
