--- a/_posts/course_reviews/department_electives/2022-12-14-AE-710.md
+++ b/_posts/course_reviews/department_electives/2022-12-14-AE-710.md
@@ -51,7 +51,7 @@ relation to oscillating spheres
 
 ---
 
-**Information about Projects/Assignments**:
+**Course Evaluation Structure**:
 
 - 10%: Weekly 5-min. quiz (10x1%)
 
